<resources>
    <string name="inter_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_name">Shopping App</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shopping_list">Shopping list</string>
    <string name="new_item">New</string>
    <string name="ed_title">Title</string>
    <string name="ed_description">Description</string>
    <string name="menu_title_save">Save</string>
    <string name="ic_delete">ic_delete</string>
    <string name="menu_title_bold">Bold</string>
    <string name="picker_color">picker color</string>
    <string name="dialog_new_list_name_hint">New List</string>
    <string name="dialog_new_list_btn_create_title">Save</string>
    <string name="dialog_new_list_title">New list name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_name_time">Time</string>
    <string name="list_name_title">TextView</string>
    <string name="list_name_counter_title">0/0</string>
    <string name="description_image_button_delete">image button delete</string>
    <string name="description_image_button_edit">image button edit</string>
    <string name="sop_list_name_list_is_empty_title">list is empty</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_alert">Do you want delete this item?</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="edit_shop_list_item_update">Update</string>
    <string name="change_list_name_title">Change list name</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="add_item">Add item</string>
    <string name="save_item">Save item</string>
    <string name="new_item_name">Item name</string>
    <string name="edit_button">Edit button</string>
    <string name="img_description_delete_button">Delete button</string>
    <string name="list_is_empty_title">List is empty</string>
    <string name="edit_item_title">Edit item</string>
    <string name="edit_shop_list_item_info">Item info</string>
    <string name="edit_shop_item_name_title">Name</string>
    <string name="share_list_chooser_title">Send by</string>
    <string name="chose_note_style">Chose note style</string>
    <string name="general_settings">General</string>
    <string name="chose_time_format">Chose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>
    <string name="chose_theme">Chose theme</string>
    <string name="content_text_size">Content text size</string>
    <string name="title_text_size">Title text size</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="theme_settings">Theme settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="note_title_text_size_key">title_text_key</string>
    <string name="note_content_text_size_key">content_text_key</string>
    <!-- Preferences keys -->
    <string name="pref_key_theme">theme_style_preference</string>
    <string name="remove_ads_key">remove_ads_key</string>
    <string name="add_to_fridge_item">Add to fridge item</string>
    <string name="label_fridge">Fridge</string>
    <string name="tvLabelFridge">Fridge</string>
    <string name="tvLabelFreeze">Freeze</string>
    <string name="label_freezer">Freezer</string>
</resources>