<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_list"
        android:title="@string/delete_list" />
    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_list" />
    <item
        android:id="@+id/share_list"
        android:title="@string/share_list" />
    <item
        android:id="@+id/add_item"
        app:actionLayout="@layout/action_add_item"
        android:icon="@drawable/ic_add_item"
        android:orderInCategory="1"
        android:title="@string/add_item"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/save_item"
        android:icon="@drawable/ic_save_item"
        android:orderInCategory="2"
        android:title="@string/save_item"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>