<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_item_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edListItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:ems="10"
            android:hint="@string/edit_shop_item_name_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edListItemInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:ems="10"
            android:hint="@string/edit_shop_list_item_info"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_shop_list_item_update"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </LinearLayout>
</androidx.cardview.widget.CardView>